--- a/bms/templates/bms/agency_config/agency_config.html
+++ b/bms/templates/bms/agency_config/agency_config.html
@@ -187,7 +187,7 @@
             return;
         }
 
-        common_dialog($('#UpdateAgencyDialog'),init_title,650,650,true,UpdateAgencyEvent);
+        common_dialog($('#UpdateAgencyDialog'),'修改归属信息',650,650,true,UpdateAgencyEvent);
 
         if(selectA)
         {
