--- a/bms/templates/bms/client_ui/account/recharge.html
+++ b/bms/templates/bms/client_ui/account/recharge.html
@@ -54,7 +54,7 @@
 
                 }else
                 {
-                    {#线上充值#}
+                    {#网上充值#}
                 }
             });
         });
