--- a/bms/templates/bms/client_ui/account/withdraw.html
+++ b/bms/templates/bms/client_ui/account/withdraw.html
@@ -49,7 +49,7 @@
 
                 }else
                 {
-                    {#线上提现#}
+                    {#网上提现#}
 
                 }
             });
