--- a/bms/templates/bms/client_ui/base.html
+++ b/bms/templates/bms/client_ui/base.html
@@ -17,6 +17,7 @@
             data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
         });
     </script>
+    <script src="{% static 'js_shortcuts.js' %}"></script>
 </head>
 <body ontouchstart>
 <div class="weui-tab" id="bottom-tab">
