--- a/bms/templates/bms/client_ui/account/withdraw.html
+++ b/bms/templates/bms/client_ui/account/withdraw.html
@@ -6,18 +6,21 @@
       <h1 class="demos-title">提现</h1>
     </header>
     <div class="weui-cells weui-cells_form">
-        <div class="weui-cell">
-            <div class="weui-cell__hd"><label for="name" class="weui-label">提现类型</label></div>
-            <div class="weui-cell__bd">
-                <input class="weui-input" id="fund_type" type="text" value="">
+        <form id="withdraw_form">
+            {% csrf_token %}
+            <div class="weui-cell">
+                <div class="weui-cell__hd"><label for="name" class="weui-label">提现类型</label></div>
+                <div class="weui-cell__bd">
+                    <input class="weui-input" id="fund_type" type="text" value="">
+                </div>
             </div>
-        </div>
-        <div class="weui-cell">
-            <div class="weui-cell__hd"><label class="weui-label">提现金额</label></div>
-            <div class="weui-cell__bd">
-                <input class="weui-input" id="withdraw_num" type="number" pattern="[0-9]*" placeholder="请输入金额">
+            <div class="weui-cell">
+                <div class="weui-cell__hd"><label class="weui-label">提现金额</label></div>
+                <div class="weui-cell__bd">
+                    <input class="weui-input" id="balance_change" name="balance_change" type="number" pattern="[0-9]*" placeholder="请输入金额">
+                </div>
             </div>
-        </div>
+        </form>
     </div>
     <div class='demos-content-padded'>
         <a href="javascript:;" class="weui-btn weui-btn_primary" id="withdraw">提现</a>
@@ -33,7 +36,7 @@
                     $.toptip('提现类型必须选择', 'error');
                     return;
                 }
-                if($('#withdraw_num').val()==''||$('#withdraw_num').val()==null||$('#withdraw_num').val()==undefined)
+                if($('#balance_change').val()==''||$('#balance_change').val()==null||$('#balance_change').val()==undefined)
                 {
                     $.toptip('提现金额不能为空', 'error');
                     return;
@@ -41,7 +44,7 @@
                 if($('#fund_type').attr('data-values')=='offline')
                 {
                     {#线下提现#}
-                    var data = new FormData($('#withdraw_form')[0]);
+                    var data = $('#withdraw_form').serializeArray();
                     var post_url = '../withdraw';
                     client_ajax_post(post_url,data,function () {
                         window.location.href='/checking'
@@ -67,13 +70,13 @@
                 }
             ],
             onChange: function(d) {
-                console.log(this, d);
+                {#console.log(this, d);#}
             },
             onClose: function() {
-                console.log("close");
+                {#console.log("close");#}
             },
             onOpen: function() {
-                console.log("open");
+                {#console.log("open");#}
             },
         });
     </script>
