--- a/bms/templates/bms/client_ui/register.html
+++ b/bms/templates/bms/client_ui/register.html
@@ -18,6 +18,7 @@
             data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
         });
     </script>
+    <script src="{% static 'js_shortcuts.js' %}"></script>
   </head>
   <body ontouchstart>
     <header class='demos-header'>
