--- a/bms/templates/bms/client_ui/login.html
+++ b/bms/templates/bms/client_ui/login.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="{% static 'jquery-weui/lib/weui.min.css'%}">
     <link rel="stylesheet" href="{% static 'jquery-weui/css/jquery-weui.min.css'%}">
     <link rel="stylesheet" href="{% static 'jquery-weui/css/demos.css'%}">
-      <script src="{% static 'jquery-weui/lib/jquery-2.1.4.js'%}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'verify/css/verify.css'%}">
+    <script src="{% static 'jquery-weui/lib/jquery-2.1.4.js'%}"></script>
     <script>
         $.ajaxSetup({
             data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
@@ -39,19 +40,21 @@
             </div>
         </div>
         <div class="weui-cell">
-            <div class="weui-cell__hd"><label class="weui-label">滑到<span id="sliderB"></span></label></div>
-            <div class="weui-cell__bd weui-cell_primary">
-
-                <div class="weui-slider-box" id='slider2'>
-                <div class="weui-slider">
-                  <div id="sliderInner" class="weui-slider__inner">
-                    <div id="sliderTrack" style="width: 0%;" class="weui-slider__track"></div>
-                    <div id="sliderHandler" style="left: 0%;" class="weui-slider__handler"></div>
-                  </div>
-                </div>
-                <div id="sliderValue" class="weui-slider-box__value">0</div>
-              </div>
-
+{#            <div class="weui-cell__hd"><label class="weui-label">滑到<span id="sliderB"></span></label></div>#}
+{#            <div class="weui-cell__bd weui-cell_primary">#}
+{##}
+{#                <div class="weui-slider-box" id='slider2'>#}
+{#                <div class="weui-slider">#}
+{#                  <div id="sliderInner" class="weui-slider__inner">#}
+{#                    <div id="sliderTrack" style="width: 0%;" class="weui-slider__track"></div>#}
+{#                    <div id="sliderHandler" style="left: 0%;" class="weui-slider__handler"></div>#}
+{#                  </div>#}
+{#                </div>#}
+{#                <div id="sliderValue" class="weui-slider-box__value">0</div>#}
+{#              </div>#}
+{##}
+{#            </div>#}
+            <div id="mpanel1" >
             </div>
         </div>
 {#        <div class="weui-cell weui-cell_vcode">#}
@@ -73,30 +76,42 @@
         FastClick.attach(document.body);
       });
     </script>
-    <script src="{% static 'jquery-weui/js/jquery-weui.js'%}"></script>
-    <script src="{% static 'jquery-weui/js/tool-kit.js'%}"></script>
+    <script type="text/javascript" src="{% static 'jquery-weui/js/jquery-weui.js'%}"></script>
+    <script type="text/javascript" src="{% static 'jquery-weui/js/tool-kit.js'%}"></script>
+    <script type="text/javascript" src="{% static 'verify/js/verify.js'%}"></script>
     <script>
-        $(function () {
-            var slider_value = 0;
-            $('#slider2').slider(function (per) {
-                slider_value = per;
-              });
+        var verify = false;
+        $('#mpanel1').slideVerify({
+        		type : 1,		//类型
+        		vOffset : 5,	//误差量，根据需求自行调整
+		        barSize : {
+		        	width : '100%',
+		        	height : '40px',
+		        },
+		        ready : function() {
+        		    verify=false;
+		    	},
+		        success : function() {
+		        	verify=true;
+		        },
+		        error : function() {
+                    verify=false;
+		        }
 
-            var slider = getRandom(0,100);
-            if (slider != '' && slider != null && slider != undefined){
-                $('#sliderB').html(slider);
-            }
+        });
+
+        $(function () {
             loginbtn = $('#login_btn').click(function () {
                 if ($('#user_tel').val() == '' ||$('#user_tel').val() == null || $('#user_tel').val() == undefined) {
                     $.toptip('登陆失败,登陆手机号码不能为空', 'error');
                     return false
-                }
+                 }
                 if ($('#user_pwd').val() == '' ||$('#user_pwd').val() == null || $('#user_pwd').val() == undefined) {
                     $.toptip('登陆失败,登陆密码不能为空', 'error');
                     return false
-                }
-                if (slider_value!=slider){
-                    $.toptip('登陆失败,请将滑动条滑动到指定数字位置', 'error');
+                 }
+                if(!verify){
+                    $.toptip('登陆失败,未滑动验证', 'error');
                     return false
                 }
 
@@ -104,10 +119,11 @@
                     user_tel: $("#user_tel").val(),
                     user_pwd: $("#user_pwd").val()
                 };
+
                 var post_url = '/login_check';
                 client_ajax_post(post_url,postdata,function () {
                     window.location.href = "/index";
-                });
+                 });
 
             });
     });
